[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scripts/Game.gd" type="Script" id=2]
[ext_resource path="res://Assets/PlayArea3.png" type="Texture" id=4]
[ext_resource path="res://Assets/ExitButton.png" type="Texture" id=5]
[ext_resource path="res://Assets/ExitButton_Dark.png" type="Texture" id=6]
[ext_resource path="res://Assets/styles/game_over_ph.tres" type="Theme" id=7]
[ext_resource path="res://Assets/styles/TimerLabel.tres" type="Theme" id=8]
[ext_resource path="res://Scripts/TimeLeftLabel.gd" type="Script" id=9]

[sub_resource type="Theme" id=2]
HSeparator/constants/separation = 4
HSeparator/styles/separator = null
MarginContainer/constants/margin_bottom = 0
MarginContainer/constants/margin_left = 0
MarginContainer/constants/margin_right = 0
MarginContainer/constants/margin_top = 0

[sub_resource type="StyleBoxTexture" id=5]
content_margin_left = 0.0
content_margin_right = 0.0
content_margin_top = 0.0
content_margin_bottom = 0.0
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 1015, 195 )
expand_margin_left = 4.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.988235, 0.988235, 0.976471, 1 )

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 425.5, 10 )

[node name="Game" type="Node2D"]
script = ExtResource( 2 )

[node name="DefenderBorder" type="StaticBody2D" parent="."]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="DefenderBorder"]
position = Vector2( 494, 286.5 )
build_mode = 1
polygon = PoolVector2Array( -410, -130, -410, 413, 440, 413, 440, -130 )

[node name="GameArea" type="Sprite" parent="DefenderBorder/CollisionShape2D"]
position = Vector2( -494, -285.5 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
centered = false

[node name="ExitButton" type="Button" parent="DefenderBorder/CollisionShape2D/GameArea"]
anchor_right = 1.0
anchor_bottom = 0.9
margin_left = 2484.0
margin_top = 1420.0
margin_right = -199.0
margin_bottom = -41.6
grow_horizontal = 0
size_flags_stretch_ratio = 0.0
theme = SubResource( 2 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
icon = ExtResource( 5 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RunnerBorder" type="StaticBody2D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="RunnerBorder"]
position = Vector2( 494, 286.5 )
build_mode = 1
polygon = PoolVector2Array( -410, -250, -410, 520, 440, 520, 440, -250 )

[node name="StaminaLabel" type="Label" parent="."]
margin_left = 1327.0
margin_top = 547.0
margin_right = 1367.0
margin_bottom = 561.0
text = "100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverScreen" type="Panel" parent="."]
visible = false
margin_left = 471.0
margin_top = 291.0
margin_right = 1017.0
margin_bottom = 539.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RunnerWinScreen" type="Label" parent="GameOverScreen"]
margin_right = 543.0
margin_bottom = 243.0
theme = ExtResource( 7 )
text = "Game Over!
Runners Win!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeoutScreen" type="Label" parent="GameOverScreen"]
margin_right = 223.0
margin_bottom = 67.0
theme = ExtResource( 7 )
text = "Game Over!
Timer Ran Out!"

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 539, 92 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -28.5, 0 )
shape = SubResource( 8 )
one_way_collision = true

[node name="TimeLeftLabel" type="Label" parent="."]
margin_left = 1059.0
margin_top = 284.0
margin_right = 1227.0
margin_bottom = 321.0
theme = ExtResource( 8 )
text = "Time Left:"
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Label" parent="TimeLeftLabel"]
margin_left = 169.0
margin_top = 1.0
margin_right = 238.0
margin_bottom = 38.0
text = "NULL"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpawnPointsRunner" type="Node2D" parent="."]
position = Vector2( 2, 0 )

[node name="1" type="Position2D" parent="SpawnPointsRunner"]
position = Vector2( 505, 775 )

[node name="2" type="Position2D" parent="SpawnPointsRunner"]
position = Vector2( 364, 775 )

[node name="3" type="Position2D" parent="SpawnPointsRunner"]
position = Vector2( 638, 775 )

[node name="4" type="Position2D" parent="SpawnPointsRunner"]
position = Vector2( 229, 775 )

[node name="5" type="Position2D" parent="SpawnPointsRunner"]
position = Vector2( 766, 775 )

[node name="6" type="Position2D" parent="SpawnPointsRunner"]
position = Vector2( 124, 775 )

[node name="7" type="Position2D" parent="SpawnPointsRunner"]
position = Vector2( 885, 774 )

[node name="SpawnPointsDefender" type="Node2D" parent="."]

[node name="LayoutA" type="Node2D" parent="SpawnPointsDefender"]

[node name="1" type="Position2D" parent="SpawnPointsDefender/LayoutA"]
position = Vector2( 511, 684 )

[node name="2" type="Position2D" parent="SpawnPointsDefender/LayoutA"]
position = Vector2( 510, 169 )

[node name="LayoutB" type="Node2D" parent="SpawnPointsDefender"]

[node name="1" type="Position2D" parent="SpawnPointsDefender/LayoutB"]
position = Vector2( 511, 684 )

[node name="2" type="Position2D" parent="SpawnPointsDefender/LayoutB"]
position = Vector2( 510, 169 )

[node name="3" type="Position2D" parent="SpawnPointsDefender/LayoutB"]
position = Vector2( 510, 435 )

[node name="Players" type="Node2D" parent="."]

[connection signal="pressed" from="DefenderBorder/CollisionShape2D/GameArea/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
